2005-11-13  Elijah Newren  <newren@gmail.com>

	* constraints-ideas.txt: update

	* src/constraints.c (constraint_partially_onscreen): remove an old
	comment that no longer applies and is just misleading

	* src/common.h (enum MetaMenuOp):
	* src/core.c (meta_core_get_menu_accelerator):
	* src/menu.c (menuitems):
	* src/window.c (menu_callback):
	add META_MENU_OP_RECOVER for shoving the titlebar back onscreen

	* src/core.[ch] (meta_core_titlebar_is_onscreen): new function

	* src/frames.c (meta_frames_button_press_event): show the window
	menu instead of starting a resize operation when clicking on the
	window frame and the titlebar is offscreen.

	* src/window.[ch] (meta_window_shove_titlebar_onscreen): new
	function for checking if a window's titlebar is onscreen,
	(meta_window_titlebar_is_onscreen): new function shoving a
	window's titlebar back onscreen

	* src/window.c (meta_window_show_menu): add a recover titlebar
	option if the titlebar is offscreen

2005-11-12  Elijah Newren  <newren@gmail.com>

	Some renaming of structs & vars for sanity sake, plus the
	introduction of infinite resistance for top screen edges when
	moving the window via the titlebar.

	* src/display.c

	(struct ResistanceDataForAnEdge):
	add an allow_past_screen_edge field

	(apply_edge_resistance):
	add an infinite resistance valid for the relevant screen edges
	when resistance_data->allow_past_screen_edge is true.

	(initialize_grab_edge_resistance_data):
	pull out growing functionality from
	compute_resistance_and_snapping_edges() into a new function,
	initialize_grab_edge_resistance_data().  Also, make sure to
	initialize resistance_data->allow_past_screen_edge appropriately
	in this new function.

	(struct ResistanceDataForAnEdge, struct MetaEdgeResistanceData,
	 edge_resistance_timeout, apply_edge_resistance,
	 meta_display_apply_edge_resistance, cleanup_edges):
	rename the EdgeResistanceTimeoutData struct to
	EdgeResistanceTimeoutData, modify the names of most all fields to